Closed Bug 529621 Opened 16 years ago Closed 16 years ago

When a table has only one column per row and that column happens to be a column header its role is exposed wrong

Categories

(Core :: Disability Access APIs, defect)

Other Branch
x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- .4-fixed

People

(Reporter: pvagner, Assigned: surkov)

References

(Blocks 1 open bug)

Details

(Keywords: regression, verified1.9.2)

Attachments

(3 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; sk-SK; rv:1.9.3a1pre) Gecko/20091117 Lightning/1.1a1pre SeaMonkey/2.1a1pre Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; sk-SK; rv:1.9.3a1pre) Gecko/20091117 Lightning/1.1a1pre SeaMonkey/2.1a1pre I think the summary says it all. A column header in the following table is exposed with role equals to 0 under Windows. I am testing with NVDA so the steps to reproduce will count on it too. Here is the example <table> <thead> <tr> <th>col1</th> </tr> </thead> <tbody> <tr> <td>bla</td> </tbody> </tr> </tbody> </table> Just to ilustrate the difference here is an example of a table which is exposed correctly: <table> <thead> <tr> <th>col1</th> <th>col2</th> </tr> </thead> <tbody> <tr> <td>bla</td> <td>bla</td> </tr> </tbody> </table> Reproducible: Always Steps to Reproduce: 1. Open the test case in seamonkey 2. navigate to the first row in a table. 3. arrow up and down to identify the issue, you can even try using object navigation. Actual Results: NVDA will anounce the column header as unknown object Expected Results: NVDA should announce column header
Attached file the test case
While adding a test case I've noticed the issue can also be seen while browsing this page. Just examine the attachments table.
This is definitely confirmed also with Firefox 3.6b3 and 3.7a1pre.
Blocks: tablea11y
Status: UNCONFIRMED → NEW
Ever confirmed: true
Can we get a regression window? (Perhaps near the IATable2 work?)
It's definitely not a problem in Firefox 3.5.3, which is a build I happen to have lying around here randomly. Checking the tables-related ranges now.
I've upgraded yesterday evening to the Seamonkey version I've reported against. Before I was running the following version of Seamonkey and the issue was not present there. I am not sure if it narrows it somewhat. Mozilla/5.0 (Windows; U; Windows NT 5.1; sk; rv:1.9.1.5pre) Gecko/20091021 SeaMonkey/2.0.1pre
This was introduced in this build: Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.2a1pre) Gecko/20090514 Minefield/3.6a1pre The possible range is http://hg.mozilla.org/mozilla-central/shortlog/6da448e1e340
Keywords: regression
Attached patch patchSplinter Review
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #413268 - Flags: review?(marco.zehe)
Attachment #413268 - Flags: review?(bolterbugz)
Comment on attachment 413268 [details] [diff] [review] patch r=me, thanks!
Attachment #413268 - Flags: review?(marco.zehe) → review+
Attachment #413268 - Flags: review?(bolterbugz) → review+
Comment on attachment 413268 [details] [diff] [review] patch r=me thanks. I didn't review the tests. >+ >+ // No elements in siblings what means the table has one column only. Therefore >+ // it should be column header. >+ *aRole = nsIAccessibleRole::ROLE_COLUMNHEADER; nit: remove "what" to make the comment more grammatical.
Comment on attachment 413268 [details] [diff] [review] patch 192 drivers: this patch is very low risk, has tests and fixes a regression from 3.5.
Attachment #413268 - Flags: approval1.9.2?
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Comment on attachment 413268 [details] [diff] [review] patch Moving request to 1.9.2.1. Regression from 3.5.
Attachment #413268 - Flags: approval1.9.2.1?
Attachment #413268 - Flags: approval1.9.2?
Drivers, any word on this one? Should this be moved to 1.9.2.3 or are you still considering this for 1.9.2.2?
Drivers: 1 line, low risk, regression fix.
Attachment #413268 - Flags: approval1.9.2.2? → approval1.9.2.3?
Comment on attachment 413268 [details] [diff] [review] patch a=beltzner for 1.9.2.4
Attachment #413268 - Flags: approval1.9.2.4? → approval1.9.2.4+
Attached patch patch1.9.2Splinter Review
mochitests are updated to 1.9.2
Marco, can you verify that this is fixed in the nightly 1.9.2 build?
Verified fixed in Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.2.4pre) Gecko/20100412 Namoroka/3.6.4pre (.NET CLR 3.5.30729)
Keywords: verified1.9.2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: