 Bug 529621 -  When a table has only one column per row and that column happens to be a column header its role is exposed wrong, r=marcoz, davidb